<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="app_name_short">Toe</string>
    <string name="app_description">A Tic Tac Toe game for 1 or 2 players with multiple skill levels</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="number_of_players">Players</string>
    <string name="coin_toss">Coin Toss</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="message_you_will_be">You: X Android: O</string>
    <string name="message_turn_indicator">Current turn</string>
    <string name="label_coin_toss">Flip a Coin</string>
    <string name="who_goes_first">%s goes first</string>
    <string name="button_start_game">Play</string>
    <string name="new_game">New Game</string>
    <string name="computer_thinking">Thinking</string>
    <string name="done">Done </string>
    <string name="two_player">Two Player</string>

    <string name="game_message_wins">%s WINS!</string>
    <string name="game_message_draw">DRAW!</string>
    <string name="game_message_over">GAME OVER</string>

    <string name="action_settings">Settings</string>

    <!-- Skill Level-->
    <string name="skill_easy">Easy</string>
    <string name="skill_normal">Normal</string>
    <string name="skill_hard">Hard</string>
    <string name="skill_very_hard">Very Hard</string>

</resources>
