<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.earthblood.tictactoe.activity.MainActivity">

    <TextView
        android:id="@+id/numberOfPlayersLabel"
        android:text="@string/number_of_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
         />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/players_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/numberOfPlayersLabel"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/gameplay_one_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_1"
            android:onClick="setNumberOfPlayers"/>
        <RadioButton android:id="@+id/gameplay_two_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_2"
            android:onClick="setNumberOfPlayers"/>
    </RadioGroup>


    <TextView
        android:id="@+id/message_you_will_be"
        android:text="@string/message_you_will_be"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/players_radio_group"
        android:layout_marginTop="75dp" />

    <TextView
        android:id="@+id/difficulty_label"
        android:text="@string/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_below="@+id/message_you_will_be"
        android:layout_marginTop="75dp" />

    <Spinner
        android:id="@+id/skill_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_you_will_be"
        android:layout_toRightOf="@+id/difficulty_label"
        android:layout_alignBaseline="@+id/difficulty_label"
        android:layout_marginTop="58dp" />



    <Button
        android:id="@+id/toin_coss_button"
        android:text="@string/label_coin_toss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/skill_spinner"
        android:onClick="coinToss"
        />

    <TextView
        android:id="@+id/turn_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toin_coss_button"
        android:layout_alignBaseline="@+id/toin_coss_button"
        android:layout_below="@+id/skill_spinner"
        android:layout_marginTop="75dp" />


</RelativeLayout>
